--- a/index.css
+++ b/index.css
@@ -1,11 +1,44 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.main-div {
+    height: 100%;
+    display: grid;
+    /* grid-template-columns: repeat(auto-fit, 300px); */
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1vw;
+    padding: 2%;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 #test-clock{
     background-color: aquamarine;
 }
+
 .time-input {
-    width: 200%;
-    margin-left:-38%
+    width: 100%;
+    margin-bottom: 5%;
 }
 
 .card {
-    width:130px;
+    width:100%;
+    height: 100%;
+    text-align: center;
+}
+
+.card-img-top {
+    width: 7rem;
+    align-self: center;
+}
+
+.card-text {
+    font-weight: bold;
 }
