--- a/index.css
+++ b/index.css
@@ -32,6 +32,8 @@
     width:100%;
     height: 100%;
     text-align: center;
+    box-shadow: 16px 18px 17px -19px rgba(0,0,0,0.75);
+
 }
 
 .card-img-top {
